RESOLVED FIXED174387
Fix typo: ContentRuleListStore::nonLegacyDdefaultStore()
https://bugs.webkit.org/show_bug.cgi?id=174387
Summary Fix typo: ContentRuleListStore::nonLegacyDdefaultStore()
Adrian Perez
Reported 2017-07-11 13:40:36 PDT
In Source/WebKit2/UIProcess/API/APIContentRuleListStore.{h,cpp}
Attachments
Patch (2.62 KB, patch)
2017-07-11 13:42 PDT, Adrian Perez
no flags
Adrian Perez
Comment 1 2017-07-11 13:42:51 PDT
WebKit Commit Bot
Comment 2 2017-07-11 15:27:51 PDT
Comment on attachment 315159 [details] Patch Clearing flags on attachment: 315159 Committed r219366: <http://trac.webkit.org/changeset/219366>
WebKit Commit Bot
Comment 3 2017-07-11 15:27:53 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.