Fix typo: ContentRuleListStore::nonLegacyDdefaultStore() https://bugs.webkit.org/show_bug.cgi?id=174387

Reviewed by Michael Catanzaro.

Rename nonLegacyDdefaultStore() to nonLegacyDefaultStore().

* UIProcess/API/APIContentRuleListStore.cpp:
(API::ContentRuleListStore::nonLegacyDefaultStore):
(API::ContentRuleListStore::defaultStore):
* UIProcess/API/APIContentRuleListStore.h:


Canonical link: https://commits.webkit.org/191207@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@219366 268f45cc-cd09-0410-ab3c-d52691b4dbfc